[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Przemysław Rożnawski <roznawski.przemyslaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.32.2"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
