[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Przemysław Rożnawski <roznawski.przemyslaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.32.2"
ruff = "^0.3.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
